# gcp-mcp-server

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: DEVELOPER_SECURITY_GUIDE.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_CONFIG.md
scripts/: README.md  security-check-all.sh  security-scan.sh
