[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-mcp-server"
version = "0.1.0"
description = "MCP server for Google Cloud Platform API integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "asklokesh", email = "asklokesh@example.com" }
]
dependencies = [
    # Pin to specific secure versions to prevent supply chain attacks
    "google-cloud-compute>=1.14.0,<2.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "google-cloud-bigquery>=3.11.0,<4.0.0",
    "google-cloud-functions>=1.13.0,<2.0.0",
    "google-cloud-container>=2.26.0,<3.0.0",
    "google-cloud-run>=0.9.0,<1.0.0",
    "google-cloud-pubsub>=2.18.0,<3.0.0",
    "google-cloud-logging>=3.5.0,<4.0.0",
    "google-cloud-monitoring>=2.15.0,<3.0.0",
    "google-cloud-aiplatform>=1.35.0,<2.0.0",
    "google-auth>=2.23.0,<3.0.0",
    "google-auth-httplib2>=0.1.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    
    # Code quality and security
    "ruff>=0.1.0,<1.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    
    # Security scanning
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "semgrep>=1.45.0,<2.0.0",
    
    # Pre-commit hooks
    "pre-commit>=3.4.0,<4.0.0",
    
    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0"
]

security = [
    # Additional security tools for auditing
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "semgrep>=1.45.0,<2.0.0",
    "cyclonedx-bom>=4.0.0,<5.0.0"
]

[project.scripts]
gcp-mcp = "gcp_mcp.server:main"